--- a/.github/workflows/run-build-and-publish.yml
+++ b/.github/workflows/run-build-and-publish.yml
@@ -27,6 +27,9 @@ jobs:
             - name: Checkout code
               uses: actions/checkout@v3
 
+            - name: Install dependencies
+              run: npm install
+
             - name: Setup node
               uses: actions/setup-node@v3
               with:
